--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="nav_header_title">Titel</string>
     <string name="nav_header_subtitle">Ondertitel</string>
     <string name="nav_header_desc">Inhoudsomschrijving</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
 
 </resources>
